// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnifiedDetailsSection renders with description:  1`] = `
<div
  className="scan-details-section"
>
  <h2>
    Scan details
  </h2>
  <ul
    className="details-section-list"
  >
    <li>
      <span
        aria-hidden="true"
        className="icon"
      >
        <UrlIcon />
      </span>
      <span
        className="screen-reader-only"
      >
        connected device name:
      </span>
      <span
        className="text"
      >
        connected device
      </span>
    </li>
    <li>
      <span
        aria-hidden="true"
        className="icon"
      >
        <DateIcon />
      </span>
      <span
        className="screen-reader-only"
      >
        scan date:
      </span>
      <span
        className="text"
      >
        timestamp
      </span>
    </li>
  </ul>
</div>
`;

exports[`UnifiedDetailsSection renders with description: description-text 1`] = `
<div
  className="scan-details-section"
>
  <h2>
    Scan details
  </h2>
  <ul
    className="details-section-list"
  >
    <li>
      <span
        aria-hidden="true"
        className="icon"
      >
        <UrlIcon />
      </span>
      <span
        className="screen-reader-only"
      >
        connected device name:
      </span>
      <span
        className="text"
      >
        connected device
      </span>
    </li>
    <li>
      <span
        aria-hidden="true"
        className="icon"
      >
        <DateIcon />
      </span>
      <span
        className="screen-reader-only"
      >
        scan date:
      </span>
      <span
        className="text"
      >
        timestamp
      </span>
    </li>
    <li>
      <span
        aria-hidden="true"
        className="icon"
      >
        <CommentIcon />
      </span>
      <span
        className="screen-reader-only"
      >
        comment:
      </span>
      <span
        className="text description-text"
      >
        description-text
      </span>
    </li>
  </ul>
</div>
`;

exports[`UnifiedDetailsSection renders with description: null 1`] = `
<div
  className="scan-details-section"
>
  <h2>
    Scan details
  </h2>
  <ul
    className="details-section-list"
  >
    <li>
      <span
        aria-hidden="true"
        className="icon"
      >
        <UrlIcon />
      </span>
      <span
        className="screen-reader-only"
      >
        connected device name:
      </span>
      <span
        className="text"
      >
        connected device
      </span>
    </li>
    <li>
      <span
        aria-hidden="true"
        className="icon"
      >
        <DateIcon />
      </span>
      <span
        className="screen-reader-only"
      >
        scan date:
      </span>
      <span
        className="text"
      >
        timestamp
      </span>
    </li>
  </ul>
</div>
`;

exports[`UnifiedDetailsSection renders with description: undefined 1`] = `
<div
  className="scan-details-section"
>
  <h2>
    Scan details
  </h2>
  <ul
    className="details-section-list"
  >
    <li>
      <span
        aria-hidden="true"
        className="icon"
      >
        <UrlIcon />
      </span>
      <span
        className="screen-reader-only"
      >
        connected device name:
      </span>
      <span
        className="text"
      >
        connected device
      </span>
    </li>
    <li>
      <span
        aria-hidden="true"
        className="icon"
      >
        <DateIcon />
      </span>
      <span
        className="screen-reader-only"
      >
        scan date:
      </span>
      <span
        className="text"
      >
        timestamp
      </span>
    </li>
  </ul>
</div>
`;
